# jcz

./: Cargo.toml  README.md
.github/workflows/: release.yml
.kiro/specs/file-encryption/: design.md  requirements.md  tasks.md
.kiro/steering/: product.md  structure.md  tech.md
completions/: README.md  jcz.bash  jcz.fish
docs/: jcz_sdd.md  jcz_srs.md
src/: lib.rs  main.rs
src/cli/: args.rs  commands.rs
src/compressors/: mod.rs  zip.rs
src/core/: config.rs  types.rs
src/crypto/: container.rs  keys.rs  mod.rs  password.rs  rsa.rs
src/operations/: collection.rs  compound.rs  compress.rs  decompress.rs  decrypt.rs  encrypt.rs  mod.rs
