[package]
name = "jcz"
version = "0.2.3"
edition = "2021"
authors = ["JCZ Contributors"]
description = "Just Compress Zip - A unified compression utility"
license = "MIT"
repository = "https://github.com/saimizi/jc"

[dependencies]
# Command-line argument parsing
clap = { version = "4.0", features = ["derive"] }

# Parallel processing
rayon = "1.7"

# Logging
log = "0.4"
env_logger = "0.10"

# Date/time for timestamps
chrono = "0.4"

# Temporary directory management
tempfile = "3.8"

# Cryptography
ring = "0.17"
rsa = "0.9"
argon2 = "0.5"
pem = "3.0"
zeroize = "1.7"
sha2 = "0.10"
rand = "0.8"
rpassword = "7.3"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
proptest = "1.4"
rand = "0.8"

[[bin]]
name = "jcz"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
